brat/test/golden/error/type-arith.brat
f(n :: #, Vec(Nat, n ^ 3)) -> Bool
f = ?f
